llvm/dev/boolcallcalleeexpr.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/boolcallcalleeexpr.llvm:12:1: error: expected instruction opcode
}
^
